# anime-game-daily-login-helper

./: .dockerignore  .gitignore  Dockerfile  Readme.md  action.yml  pyproject.toml
.github/actions/gi-check-in/: action.yml
.github/workflows/: codeql-analysis.yml  genshin.yml  lint.yml  main.yml  publish.yml  pylint.yml
an_anime_game_check_in/: __init__.py  __main__.py  api.py  games.toml  strings.py  util.py
genshin_check_in/: __init__.py  __main__.py  api.py  events.toml
genshin_checkin/: __init__.py  __main__.py  api.py  data.py
hoyolab_check_in/: __init__.py  __main__.py  api.py  games.toml
