[tool.poetry]
name = "genshin-check-in"
version = "0.1.2"
description = "Automatically check-in to Genshin Impact monthly check-in web event"
authors = ["Mubashshir <ahmubashshir@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"

[tool.poetry.scripts]
genshin = "genshin_check_in.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
