[tool.poetry]
name = "hoyolab-check-in"
version = "0.3.2"
description = "Automatically check-in to Hoyolab Games monthly check-in web event"
authors = ["Mubashshir <ahmubashshir@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
toml = "^0.10.2"

[tool.poetry.scripts]
hoyolab = "hoyolab_check_in:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
