[tool.poetry]
name = "an-anime-game-check-in"
version = "0.1"
description = "Automatically check-in to All of the Anime Games monthly check-in web event"
authors = ["Mubashshir <ahmubashshir@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
toml = "^0.10.2"

[tool.poetry.scripts]
"an-anime-game-check-in" = "an_anime_game_check_in:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
